--- a/src/styles/_theme.scss
+++ b/src/styles/_theme.scss
@@ -6,7 +6,8 @@ $primary-colour: #4444FF;
 $secondary-colour: #FF5811;
 $highlight-colour: #FFFF44;
 $light-colour: #FFF;
-$dark-colour: #222;
+$dark-colour: #000030;
+$darkest-colour: #000;
 
 // Typography
 $body-font: 'Frutiger LT Std', 'Segoe UI', Helvetica, sans-serif;
