Update theme imports to use import alias

--- a/src/components/layout.module.scss
+++ b/src/components/layout.module.scss
@@ -1,5 +1,5 @@
 // pch.wales master page layout
-@use "../styles/theme";
+@use "@/styles/theme";
 
 // `root` is basically a proxy for `body`
 .root {}
