--- a/src/styles/_theme.scss
+++ b/src/styles/_theme.scss
@@ -13,6 +13,7 @@ $darkest-colour: #000;
 $body-font: 'Frutiger LT Std', 'Segoe UI', Helvetica, sans-serif;
 $title-font: 'Akzidenz-Grotesk BQ', Helvetica, sans-serif;
 $default-font-size: calc(15px + 0.390625vw);
+$slightly-bigger-font-size: calc(18px + 0.390625vw);
 
 // Spacing
 $page-margin: 10vw;
