--- a/src/components/footer.module.scss
+++ b/src/components/footer.module.scss
@@ -5,6 +5,8 @@
   color: theme.$light-colour;
   background-color: theme.$darkest-colour;
 
+  padding: 2rem theme.$page-margin;
+
   // Always appear at bottom of page
   margin-top: auto;
 }
@@ -12,14 +14,9 @@
 // We manage the footer sections with a flexi-grid
 .grid {
   position: relative;
-  margin: 2rem theme.$page-margin;
-
   display: flex;
   flex-direction: column;
   gap: 1rem;
-
-  // Cap width for ultrawide displays
-  max-width: 1440px;
 
   .section {
     // TODO: make responsive; should be 2 columns on desktop, 1 on mobile
@@ -60,15 +57,15 @@
 
 // Line to separate sections
 .divider {
-  margin: 0 theme.$page-margin;
   height: 0.2rem;
   background: theme.$primary-colour;
+
+  // Divide
+  margin: 1rem 0;
 }
 
 // Info bar at bottom of page
 .infoBar {
-  margin: 1rem theme.$page-margin;
-
   // Right-align
   text-align: right;
 }
