Make header clicky

--- a/src/components/header.module.scss
+++ b/src/components/header.module.scss
@@ -3,7 +3,11 @@
 .container {
   position: relative;
   background-color: theme.$primary-colour;
+
+  // Override default <a> text style
+  a {
   color: theme.$light-colour;
+}
 }
 
 .logo {
