Fix style inconsistencies

--- a/src/pages/resources/study.module.scss
+++ b/src/pages/resources/study.module.scss
@@ -49,7 +49,7 @@
 
     .fileCard {
       display: flex;
-      align-content: start;
+      align-content: flex-start;
       overflow: hidden;
 
       width: 8rem;
