--- a/src/components/footer.module.scss
+++ b/src/components/footer.module.scss
@@ -45,7 +45,8 @@
     // Specific section tweaks
     .attributionLogos {
       gap: 1rem;
-      max-width: 10rem;
+      width: auto;
+      max-width: 18rem;
     }
     
     .socialLogos {
