--- a/src/styles/fonts.scss
+++ b/src/styles/fonts.scss
@@ -4,7 +4,7 @@
         url('/fonts/AkzidenzGroteskBQ-Medium.woff') format('woff');
     font-weight: 500;
     font-style: normal;
-    font-display: swap;
+    font-display: block;
 }
 
 @font-face {
@@ -13,7 +13,7 @@
         url('/fonts/FrutigerLTStd-Italic.woff') format('woff');
     font-weight: normal;
     font-style: italic;
-    font-display: swap;
+    font-display: block;
 }
 
 @font-face {
@@ -22,7 +22,7 @@
         url('/fonts/FrutigerLTStd-Bold.woff') format('woff');
     font-weight: bold;
     font-style: normal;
-    font-display: swap;
+    font-display: block;
 }
 
 @font-face {
@@ -31,5 +31,5 @@
         url('/fonts/FrutigerLTStd-Roman.woff') format('woff');
     font-weight: normal;
     font-style: normal;
-    font-display: swap;
+    font-display: block;
 }
